# InfiniteJournal

./: .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  backup.py  canvas_state.json  config.py  count_lines.py  debug.py  diagnostic.py  grid.py  input_handler.py  integration_examples.py  itegration_examples.py  main.py  math_engine.py  mypy.ini  pre-commit-config.yaml  pyproject.toml  pytest.ini  renderer.py  run.bat  run.sh  saver.py  setup.py  tox.ini
.github/workflows/: ci.yml
adapters/: __init__.py  fs_adapter.py  panda3d_adapter.py  pygame_adapter.py  pygame_adapter.py.backup
bootstrap/: __init__.py  adapters.py  cli.py  database.py  errors.py  factory.py  legacy_factory.py  logging_setup.py  parsers.py  services.py  url_validator.py  widgets.py
core/: error_boundary.py  event_bus.py  events.py  interfaces.py  models.py  performance.py  services.py
core/coordinates/: infinite_system.py
core/drawing/: __init__.py  canvas.py  config.py  exceptions.py  input_handler.py  models.py  stroke_generator.py
core/math/: curve_generation.py
core/preview/: __init__.py  shape_preview.py
core/rendering/: layered_system.py
interface/: __init__.py  framework.py
services/: __init__.py  app.py  application.py  calculator.py  database.py  drawing.py  drawing_refactored.py  grid.py  journal.py  simple_drawing.py  tools.py  undo.py  utilities.py
services/calculator/: __init__.py  algebra.py  calculator.py  calculator_examples.txt  calculus.py  dispatcher.py  parser.py  test_calculator.py
services/calculator/core/: algebra.py  calculus.py  plotting.py  trigonometry.py
services/calculator/infra/: dispatcher.py  parser.py
services/copy/: app.py  grid.py  journal.py  undo.py
services/core/: __init__.py  events.py  framework.py  storage.py  validation.py
services/drawing/: __init__.py  colorwheel.py  engine.py  tools.py
src/: .gitignore  .pre-commit-config.yaml  pyproject.toml  run.py  setup.cfg
src/infinitejournal/: __init__.py  config.py  main.py
src/infinitejournal/backends/: base.py  opengl.py
src/infinitejournal/interface/: framework.py
src/infinitejournal/utilities/: logging.py
src/infinitejournal/world/: camera.py  grid.py  player.py  scene.py
src/requirements/: base.txt
ui/: canvas_widget.py  drawing_interface.py  grid.py  grid_widget.py  hotbar.py  notebook.py  popup_manager.py  simple_grid.py  status_bar.py  toolbar.py
utils/: geometry.py  typing_extensions.py
