# setup.cfg

[metadata]
name = infinitejournal
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A 3D infinite journal application for creative drawing and note-taking
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DylanRayHastings/infinitejournal
project_urls =
    Bug Tracker = https://github.com/DylanRayHastings/infinitejournal/issues
    Documentation = https://github.com/DylanRayHastings/infinitejournal
    Source Code = https://github.com/DylanRayHastings/infinitejournal
license = Unlicense
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications
    Environment :: Win32 (MS Windows)
    Environment :: MacOS X
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: The Unlicense (Unlicense)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Artistic Software
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Editors
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pygame>=2.5.0
    PyOpenGL>=3.1.6
    PyOpenGL-accelerate>=3.1.6
    numpy>=1.24.0
    Pillow>=10.0.0
    msgpack>=1.0.5
    python-dotenv>=1.0.0
zip_safe = False
include_package_data = True

[options.packages.find]
where = src
include = infinitejournal*
exclude =
    tests*
    docs*

[options.extras_require]
dev =
    %(test)s
    black>=24.1.0
    isort>=5.13.0
    flake8>=7.0.0
    mypy>=1.8.0
    pre-commit>=3.6.0
    tox>=4.11.0
    build>=1.0.0
    twine>=4.0.0
test =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-mock>=3.12.0
    pytest-timeout>=2.2.0
    pytest-xdist>=3.5.0
    hypothesis>=6.92.0
docs =
    sphinx>=7.2.0
    sphinx-rtd-theme>=2.0.0
    sphinx-autodoc-typehints>=1.25.0
    myst-parser>=2.0.0
perf =
    py-spy>=0.3.14
    memory-profiler>=0.61.0
    line-profiler>=4.1.0
all =
    %(dev)s
    %(docs)s
    %(perf)s

[options.entry_points]
console_scripts =
    infinitejournal = infinitejournal.main:main
    infinitejournal-diagnostic = infinitejournal.utilities.diagnostic:main

[options.package_data]
infinitejournal =
    py.typed
    data/*.json
    shaders/*.glsl
    assets/*

[bdist_wheel]
universal = 0

[sdist]
formats = gztar

[flake8]
max-line-length = 100
max-complexity = 10
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .tox,
    .venv,
    venv,
    docs,
    scripts
per-file-ignores =
    __init__.py:F401
    test_*.py:S101

[tool:pytest]
minversion = 7.0
addopts = 
    -ra
    --strict-markers
    --strict-config
    --cov=infinitejournal
    --cov-branch
    --cov-report=term-missing:skip-covered
    --cov-report=html
    --cov-report=xml
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test* *Tests
python_functions = test_*
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests
    gui: marks tests that require GUI
    opengl: marks tests that require OpenGL
filterwarnings =
    error
    ignore::UserWarning
    ignore::DeprecationWarning

[coverage:run]
source = src
omit =
    */tests/*
    */test_*.py
    */__main__.py
branch = True

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod
precision = 2
show_missing = True
skip_covered = True

[coverage:html]
directory = htmlcov

[coverage:xml]
output = coverage.xml

[pydocstyle]
convention = google
match = (?!test_).*\.py
match-dir = (?!tests).*
add-ignore = D100,D101,D102,D103,D104,D105,D106,D107

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_column_numbers = True

[mypy-tests.*]
ignore_errors = True

[mypy-setup]
ignore_errors = True

[egg_info]
tag_build = 
tag_date = 0